Closed Bug 325795 Opened 19 years ago Closed 19 years ago

Crash in [@ nsTreeContentView::GetCell] if tree.view.getCellValue(null,null);

Categories

(Core :: XUL, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: also, Assigned: timeless)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20051110 Firefox/1.6a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20051110 Firefox/1.6a1 Firefox crashes if tree onselect and get value with tree.view.getCellValue(null,null); Reproducible: Always
Comment on attachment 210641 [details] crash if tree.view.getCellValue(null,null) open attachment and select a treeitem
Talkback ID: TB14719081K
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash, talkbackid
Assignee: nobody → Jan.Varga
Component: Menus → XP Toolkit/Widgets: Trees
OS: Windows 2000 → All
Product: Firefox → Core
QA Contact: menus → xptoolkit.trees
Hardware: PC → All
Version: unspecified → Trunk
Only the second arg needs to be null, right? GetCellValue doesn't null check aCol before passing it to GetCell.
(In reply to comment #4) > Only the second arg needs to be null, right? GetCellValue doesn't null check > aCol before passing it to GetCell. > That's right
Summary: Crash if tree.view.getCellValue(null,null); → Crash in [@ nsTreeContentView::GetCell] if tree.view.getCellValue(null,null);
Attached patch ensure args (obsolete) — Splinter Review
Assignee: Jan.Varga → timeless
Status: NEW → ASSIGNED
Attachment #216360 - Flags: superreview?(roc)
Attachment #216360 - Flags: review?(roc)
Attachment #216360 - Flags: superreview?(roc)
Attachment #216360 - Flags: superreview+
Attachment #216360 - Flags: review?(roc)
Attachment #216360 - Flags: review+
Timeless, what's the status of this bug? Was the patch checked in? Can this bug be closed then?
Comment on attachment 216360 [details] [diff] [review] ensure args mozilla/layout/xul/base/src/tree/src/nsTreeContentView.cpp 1.54
Attachment #216360 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Keywords: talkbackid
Verified FIXED using build 2006-05-07-06 of SeaMonkey trunk on Windows XP with https://bugzilla.mozilla.org/attachment.cgi?id=210641&action=view No crash.
Status: RESOLVED → VERIFIED
(In reply to comment #10) > Verified FIXED using build 2006-05-07-06 of SeaMonkey trunk on Windows XP with > https://bugzilla.mozilla.org/attachment.cgi?id=210641&action=view > > No crash. > Test with: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1 nothing changed, still crashes
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: xptoolkit.trees → xptoolkit.widgets
Crash Signature: [@ nsTreeContentView::GetCell]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: