Bug 325795 Crash in [@ nsTreeContentView::GetCell] if tree.view.getCellValue(null,null); r=roc sr=roc